[gd_scene load_steps=6 format=2]

[ext_resource path="res://Pickups/PantsPickup.gd" type="Script" id=1]
[ext_resource path="res://Misc/pants.png" type="Texture" id=2]
[ext_resource path="res://Misc/ArrowAnim.tscn" type="PackedScene" id=3]
[ext_resource path="res://Misc/PickupSound.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15.3759, 11.4068 )

[node name="PantsPickup" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 1 )

[node name="ArrowAnim" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -13 )

[node name="Pickup" parent="." instance=ExtResource( 4 )]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="area_exited" from="Hitbox" to="." method="_on_Hitbox_area_exited"]
